✨  Update On-Page SEO

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#resources">Resources</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="testimonials.html">Testimonials</a>
                     </li>
                     <li class="nav-item">
@@ -82,12 +85,12 @@
     </section>
 
     <!-- About Preview Section -->
-    <section class="about-preview py-5">
+    <section id="about" class="about-preview py-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-right">
                     <h2 class="section-title">About AdtoLeadz</h2>
-                    <p class="section-text">We are Madurai's premier digital marketing agency, dedicated to driving your business growth. Our expert team specializes in search optimization, pay-per-click advertising, and social media marketing to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
+                    <p class="section-text">We are Madurai's premier digital marketing agency, dedicated to driving your business growth. Our expert team specializes in <a href="seo.html" class="text-decoration-none fw-bold">search optimization</a>, <a href="seo.html#ppc" class="text-decoration-none fw-bold">pay-per-click advertising</a>, and <a href="social-media-marketing.html" class="text-decoration-none fw-bold">social media marketing</a> to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
                     <p class="section-text">Our approach combines creativity, data-driven strategies, and cutting-edge technology to create campaigns that not only look great but also drive real business growth.</p>
                     <a href="about.html" class="btn btn-primary">Read More</a>
                 </div>
@@ -126,7 +129,7 @@
     </section>
 
     <!-- Services Overview Section -->
-    <section class="services-overview py-5 bg-light">
+    <section id="services" class="services-overview py-5 bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
@@ -141,7 +144,7 @@
                             <i class="fas fa-laptop-code"></i>
                         </div>
                         <h4>Web Design</h4>
-                        <p>Create stunning, responsive websites that convert visitors into customers with our expert design team.</p>
+                        <p>Create stunning, responsive websites that convert visitors into customers with our expert <a href="web-design.html" class="text-decoration-none">design team</a>.</p>
                         <a href="web-design.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -151,7 +154,7 @@
                             <i class="fas fa-share-alt"></i>
                         </div>
                         <h4>Social Media Marketing</h4>
-                        <p>Boost your brand's presence and engagement with our expert social media marketing strategies designed for businesses of all sizes.</p>
+                        <p>Boost your brand's presence and engagement with our expert <a href="social-media-marketing.html" class="text-decoration-none">social media marketing strategies</a> designed for businesses of all sizes.</p>
                         <a href="social-media-marketing.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -161,7 +164,7 @@
                             <i class="fas fa-search"></i>
                         </div>
                         <h4>Search Engine Optimization</h4>
-                        <p>Increase your website's visibility and attract more organic traffic with our comprehensive SEO services tailored to your business needs.</p>
+                        <p>Increase your website's visibility and attract more organic traffic with our comprehensive <a href="seo.html" class="text-decoration-none">SEO services</a> tailored to your business needs.</p>
                         <a href="seo.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -171,7 +174,7 @@
                             <i class="fas fa-users"></i>
                         </div>
                         <h4>Social Media Optimization</h4>
-                        <p>Maximize your online presence and engagement with our expert Social Media Optimization services.</p>
+                        <p>Maximize your online presence and engagement with our expert <a href="smo.html" class="text-decoration-none">Social Media Optimization services</a>.</p>
                         <a href="smo.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -191,8 +194,8 @@
                             <i class="fas fa-globe"></i>
                         </div>
                         <h4>Website Development</h4>
-                        <p>Transform your online presence with our professional WordPress development and design solutions.</p>
-                        <a href="#" class="btn btn-outline-primary">Learn More</a>
+                        <p>Transform your online presence with our professional <a href="web-design.html" class="text-decoration-none">WordPress development and design solutions</a>.</p>
+                        <a href="web-design.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="700">
@@ -201,8 +204,8 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <h4>Google My Business</h4>
-                        <p>Optimize your local search presence and attract more customers with our GMB management services.</p>
-                        <a href="#" class="btn btn-outline-primary">Learn More</a>
+                        <p>Optimize your local search presence and attract more customers with our <a href="seo.html" class="text-decoration-none">GMB management services</a>.</p>
+                        <a href="seo.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -210,11 +213,11 @@
     </section>
 
     <!-- Process Section -->
-    <section class="process-section py-5">
+    <section id="process" class="process-section py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">We Love What We Do And Helping Others Succeed</h2>
+                    <h2 class="section-title">What We Do And Helping Others Succeed</h2>
                     <p class="section-subtitle">Our proven process to deliver exceptional results</p>
                 </div>
             </div>
@@ -223,7 +226,6 @@
                     <div class="process-container">
                         <div class="process-steps">
                             <div class="process-card" data-aos="fade-up" data-aos-delay="100">
-                                <div class="step-number">1</div>
                                 <div class="process-icon">
                                     <i class="fas fa-clipboard-list"></i>
                                 </div>
@@ -231,7 +233,6 @@
                                 <p>Develop a strategic roadmap tailored to achieve client-specific objectives.</p>
                             </div>
                             <div class="process-card" data-aos="fade-up" data-aos-delay="200">
-                                <div class="step-number">2</div>
                                 <div class="process-icon">
                                     <i class="fas fa-search"></i>
                                 </div>
@@ -239,7 +240,6 @@
                                 <p>Analyze industry competitors to identify strengths, weaknesses, and opportunities.</p>
                             </div>
                             <div class="process-card" data-aos="fade-up" data-aos-delay="300">
-                                <div class="step-number">3</div>
                                 <div class="process-icon">
                                     <i class="fas fa-code"></i>
                                 </div>
@@ -247,7 +247,6 @@
                                 <p>Implement creative and technical solutions to enhance client projects.</p>
                             </div>
                             <div class="process-card" data-aos="fade-up" data-aos-delay="400">
-                                <div class="step-number">4</div>
                                 <div class="process-icon">
                                     <i class="fas fa-chart-bar"></i>
                                 </div>
@@ -255,7 +254,6 @@
                                 <p>Measure performance metrics to ensure alignment with goals.</p>
                             </div>
                             <div class="process-card" data-aos="fade-up" data-aos-delay="500">
-                                <div class="step-number">5</div>
                                 <div class="process-icon">
                                     <i class="fas fa-file-alt"></i>
                                 </div>
@@ -270,7 +268,7 @@
     </section>
 
     <!-- Testimonials Preview Section -->
-    <section class="testimonials-preview py-5 bg-light">
+    <section id="testimonials" class="testimonials-preview py-5 bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
@@ -337,7 +335,7 @@
     </section>
 
     <!-- Blog Preview Section -->
-    <section class="blog-preview py-5">
+    <section id="blog" class="blog-preview py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
@@ -457,6 +455,65 @@
         </div>
     </section>
 
+    <!-- Resources Section -->
+    <section id="resources" class="resources-section py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
+                    <h2 class="section-title">Helpful Resources</h2>
+                    <p class="section-subtitle">External tools and resources to help you succeed online</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="resource-card text-center">
+                        <div class="resource-icon mb-3">
+                            <i class="fab fa-google fa-3x text-primary"></i>
+                        </div>
+                        <h5>Google Analytics</h5>
+                        <p class="text-muted">Track your website performance and user behavior</p>
+                        <a href="https://analytics.google.com" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary btn-sm">Visit Google Analytics</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="resource-card text-center">
+                        <div class="resource-icon mb-3">
+                            <i class="fas fa-search fa-3x text-primary"></i>
+                        </div>
+                        <h5>Google Search Console</h5>
+                        <p class="text-muted">Monitor your website's search performance</p>
+                        <a href="https://search.google.com/search-console" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary btn-sm">Visit Search Console</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="resource-card text-center">
+                        <div class="resource-icon mb-3">
+                            <i class="fas fa-chart-line fa-3x text-primary"></i>
+                        </div>
+                        <h5>Google Trends</h5>
+                        <p class="text-muted">Explore trending topics and keywords</p>
+                        <a href="https://trends.google.com" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary btn-sm">Visit Google Trends</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="resource-card text-center">
+                        <div class="resource-icon mb-3">
+                            <i class="fas fa-mobile-alt fa-3x text-primary"></i>
+                        </div>
+                        <h5>PageSpeed Insights</h5>
+                        <p class="text-muted">Test your website's speed and performance</p>
+                        <a href="https://pagespeed.web.dev" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary btn-sm">Test Page Speed</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-lg-12 text-center">
+                    <p class="text-muted">Looking for more resources? Check out our <a href="blog.html" class="text-decoration-none fw-bold">digital marketing blog</a> for expert tips and insights.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer bg-dark text-light py-5">
         <div class="container">
@@ -482,11 +539,35 @@
                     <ul class="list-unstyled">
                         <li><a href="web-design.html">Web Design</a></li>
                         <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
-                        <li><a href="seo.html">SEO</a></li>
-                        <li><a href="smo.html">SMO</a></li>
+                        <li><a href="seo.html">SEO Services</a></li>
+                        <li><a href="smo.html">SMO Services</a></li>
+                        <li><a href="seo.html#ppc">PPC Management</a></li>
+                        <li><a href="web-design.html#ecommerce">E-commerce Solutions</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <div class="col-lg-2 col-md-6 mb-4">
+                    <h5>Company</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html#team">Our Team</a></li>
+                        <li><a href="about.html#journey">Our Journey</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6 mb-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#services">Our Services</a></li>
+                        <li><a href="index.html#process">Our Process</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
+                        <li><a href="index.html#blog">Latest Blog</a></li>
+                        <li><a href="index.html#resources">Resources</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6 mb-4">
                     <h5>Contact Info</h5>
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt me-2"></i>Madurai, Tamil Nadu, India</p>
@@ -494,10 +575,10 @@
                         <p><i class="fas fa-envelope me-2"></i>info@adtoleadz.com</p>
                     </div>
                     <div class="social-links mt-3">
-                        <a href="#" class="me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
+                        <a href="https://facebook.com/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://instagram.com/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="https://linkedin.com/company/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://twitter.com/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
