--- a/seo.html
+++ b/seo.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Why Search Optimization Matters</h2>
-                    <p class="section-subtitle">The benefits of ranking higher in search results</p>
+                    <p class="section-subtitle">The benefits of ranking higher in search results. Learn more about <a href="https://developers.google.com/search/docs/beginner/seo-starter-guide" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Google's SEO guidelines</a> and <a href="https://moz.com/beginners-guide-to-seo" target="_blank" rel="noopener noreferrer" class="text-decoration-none">SEO best practices</a>.</p>
                 </div>
             </div>
             <div class="row">
