--- a/single-blog.html
+++ b/single-blog.html
@@ -71,7 +71,7 @@
                         <span class="post-reading-time"><i class="fas fa-clock me-1"></i>5 min read</span>
                     </div>
                     <h1 class="blog-post-title text-center" data-aos="fade-up" data-aos-delay="200">10 Essential SEO Tips for 2024: Boost Your Search Rankings</h1>
-                    <p class="blog-post-subtitle text-center" data-aos="fade-up" data-aos-delay="300">Discover the latest SEO strategies that will help your website rank higher in search results and drive more organic traffic.</p>
+                    <p class="blog-post-subtitle text-center" data-aos="fade-up" data-aos-delay="300">Discover the latest SEO strategies that will help your website rank higher in search results and drive more organic traffic. For more insights, check out <a href="https://developers.google.com/search/docs" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Google's Search Documentation</a> and <a href="https://www.semrush.com/blog/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">SEMrush's SEO blog</a>.</p>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
                         <p class="lead">Search Engine Optimization (SEO) continues to evolve, and staying ahead of the curve is crucial for maintaining and improving your website's search rankings. In this comprehensive guide, we'll explore the 10 most essential SEO tips for 2024 that will help you boost your search visibility and drive more organic traffic.</p>
 
                         <h2>1. Focus on Core Web Vitals</h2>
-                        <p>Google's Core Web Vitals are more important than ever in 2024. These metrics measure user experience and directly impact your search rankings. Focus on improving:</p>
+                        <p>Google's <a href="https://web.dev/vitals/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Core Web Vitals</a> are more important than ever in 2024. These metrics measure user experience and directly impact your search rankings. Focus on improving:</p>
                         <ul>
                             <li><strong>Largest Contentful Paint (LCP):</strong> Aim for under 2.5 seconds</li>
                             <li><strong>First Input Delay (FID):</strong> Keep it under 100 milliseconds</li>
@@ -107,7 +107,7 @@
                         </ul>
 
                         <h2>2. Optimize for Mobile-First Indexing</h2>
-                        <p>With mobile-first indexing being the default, ensure your website is fully optimized for mobile devices. This includes:</p>
+                        <p>With <a href="https://developers.google.com/search/mobile-sites/mobile-first-indexing" target="_blank" rel="noopener noreferrer" class="text-decoration-none">mobile-first indexing</a> being the default, ensure your website is fully optimized for mobile devices. This includes:</p>
                         <ul>
                             <li>Responsive design that works on all screen sizes</li>
                             <li>Fast loading times on mobile networks</li>
