✨ Working on Keyword Stuffing

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About AdtoLeadz - Your Trusted Digital Marketing Partner in Madurai</title>
     <meta name="description" content="Discover AdtoLeadz's story, mission, and the passionate team behind our success. Learn how we've helped businesses in Madurai achieve their digital marketing goals with innovative strategies and proven results.">
-    <meta name="keywords" content="digital marketing services Madurai, about us, digital marketing team, company history, mission, vision, values, AdtoLeadz, marketing agency for startups">
+    <meta name="keywords" content="digital marketing agency Madurai, about AdtoLeadz, company mission, marketing team, agency values">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
