--- a/smo.html
+++ b/smo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Optimization (SMO) Services - Maximize Your Social Presence | AdtoLeadz</title>
     <meta name="description" content="Professional Social Media Optimization (SMO) services in Madurai. We optimize your social profiles, target the right audience, and boost engagement. Maximize your social media presence with AdtoLeadz.">
-    <meta name="keywords" content="SMO services Madurai, social media optimization Madurai, profile optimization, social media analytics, brand awareness, social media engagement, SMO company Madurai">
+    <meta name="keywords" content="SMO services Madurai, social media optimization, profile optimization, brand awareness, engagement strategies">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
