--- a/web-design.html
+++ b/web-design.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Web Design Services in Madurai | Custom Websites That Convert | AdtoLeadz</title>
     <meta name="description" content="Create stunning, responsive websites with our web design team in Madurai. We build custom sites, e-commerce solutions, and WordPress websites that drive conversions and enhance user experience.">
-    <meta name="keywords" content="web design company Madurai, web digital marketing, professional web design services, responsive websites, WordPress development, e-commerce, custom websites">
+    <meta name="keywords" content="web design company Madurai, responsive websites, WordPress development, custom websites, professional design">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
