--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Marketing Blog - Expert Tips & Insights | AdtoLeadz</title>
     <meta name="description" content="Stay updated with the latest online marketing trends, tips, and insights from AdtoLeadz. Expert advice on web design, SEO, social media marketing, and more.">
-    <meta name="keywords" content="online marketing blog, SEO tips, social media marketing, web design trends, marketing insights, AdtoLeadz blog">
+    <meta name="keywords" content="digital marketing blog, SEO tips, marketing insights, web design trends, AdtoLeadz articles">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
