--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transform Your Business with Expert Digital Marketing in Madurai | AdtoLeadz</title>
     <meta name="description" content="Transform your business with AdtoLeadz, Madurai's trusted digital marketing partner. We specialize in SEO, social media marketing, and web design to drive growth and increase your online visibility.">
-    <meta name="keywords" content="digital marketing agency Madurai, SEO company Madurai, marketing agency for startups, google SEO price, SEO marketing company near me, web digital marketing, social media agency, best social media marketing, organic social media marketing, PPC management services, SEO services in Madurai, content marketing company">
+    <meta name="keywords" content="digital marketing agency Madurai, SEO services, social media marketing, web design, online marketing">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6" data-aos="fade-right">
                     <h1 class="hero-title">Transform Your Business with Expert Digital Marketing in Madurai</h1>
-                    <p class="hero-subtitle">Transform your business with our comprehensive online marketing solutions. We help you grow, engage, and convert your audience into loyal customers. AdtoLeadz has been providing both courses and services with more than 3+ years of experience in Madurai.</p>
+                    <p class="hero-subtitle">Elevate your business with our comprehensive online marketing solutions. We help you grow, engage, and convert your audience into loyal customers. AdtoLeadz has been providing both courses and services with more than 3+ years of experience in Madurai.</p>
                     <div class="hero-buttons">
                         <a href="contact.html" class="btn btn-primary btn-lg me-3">Get Started</a>
                         <a href="about.html" class="btn btn-outline-light btn-lg">Learn More</a>
@@ -90,7 +90,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-right">
                     <h2 class="section-title">About AdtoLeadz</h2>
-                    <p class="section-text">We are Madurai's premier digital marketing agency, dedicated to driving your business growth. Our expert team specializes in <a href="seo.html" class="text-decoration-none fw-bold">search optimization</a>, <a href="seo.html#ppc" class="text-decoration-none fw-bold">pay-per-click advertising</a>, and <a href="social-media-marketing.html" class="text-decoration-none fw-bold">social media marketing</a> to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
+                    <p class="section-text">We are Madurai's premier online marketing firm, dedicated to driving your business growth. Our expert team specializes in <a href="seo.html" class="text-decoration-none fw-bold">search optimization</a>, <a href="seo.html#ppc" class="text-decoration-none fw-bold">pay-per-click advertising</a>, and <a href="social-media-marketing.html" class="text-decoration-none fw-bold">social media marketing</a> to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
                     <p class="section-text">Our approach combines creativity, data-driven strategies, and cutting-edge technology to create campaigns that not only look great but also drive real business growth.</p>
                     <a href="about.html" class="btn btn-primary">Read More</a>
                 </div>
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Our Specialized Online Marketing Services</h2>
-                    <p class="section-subtitle">Comprehensive solutions designed to grow your business and enhance your online presence</p>
+                    <p class="section-subtitle">Comprehensive solutions designed to grow your business and enhance your web presence</p>
                 </div>
             </div>
             <div class="row">
@@ -154,7 +154,7 @@
                             <i class="fas fa-share-alt"></i>
                         </div>
                         <h4>Social Media Marketing</h4>
-                        <p>Boost your brand's presence and engagement with our expert <a href="social-media-marketing.html" class="text-decoration-none">social media marketing strategies</a> designed for businesses of all sizes.</p>
+                        <p>Boost your brand's presence and engagement with our expert <a href="social-media-marketing.html" class="text-decoration-none">social media strategies</a> designed for businesses of all sizes.</p>
                         <a href="social-media-marketing.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                             <i class="fas fa-users"></i>
                         </div>
                         <h4>Social Media Optimization</h4>
-                        <p>Maximize your online presence and engagement with our expert <a href="smo.html" class="text-decoration-none">Social Media Optimization services</a>.</p>
+                        <p>Maximize your web presence and engagement with our expert <a href="smo.html" class="text-decoration-none">Social Media Optimization services</a>.</p>
                         <a href="smo.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                             <i class="fas fa-globe"></i>
                         </div>
                         <h4>Website Development</h4>
-                        <p>Transform your online presence with our professional <a href="web-design.html" class="text-decoration-none">WordPress development and design solutions</a>.</p>
+                        <p>Transform your web presence with our professional <a href="web-design.html" class="text-decoration-none">WordPress development and design solutions</a>.</p>
                         <a href="web-design.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -340,7 +340,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Latest from Our Blog</h2>
-                    <p class="section-subtitle">Stay updated with the latest online marketing trends and insights</p>
+                    <p class="section-subtitle">Stay updated with the latest web marketing trends and insights</p>
                 </div>
             </div>
             <div class="row">
@@ -395,7 +395,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Frequently Asked Questions</h2>
-                    <p class="section-subtitle">Common questions about our online marketing services in Madurai</p>
+                    <p class="section-subtitle">Common questions about our web marketing services in Madurai</p>
                 </div>
             </div>
             <div class="row">
@@ -421,7 +421,7 @@
                             </h2>
                             <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We specialize in social media marketing for businesses of all sizes, including B2B companies. Our team has 3+ years of experience helping businesses in Madurai grow their online presence with proven strategies and measurable results.
+                                     We specialize in social media marketing for businesses of all sizes, including B2B companies. Our experienced team helps businesses in Madurai expand their online reach with data-driven strategies and proven results.
                                 </div>
                             </div>
                         </div>
@@ -433,7 +433,7 @@
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Yes! We work with startups and offer comprehensive digital marketing services designed to help new businesses establish their online presence cost-effectively. Our packages are tailored to meet the unique needs and budgets of emerging companies.
+                                     Yes! We work with startups and offer comprehensive online marketing services designed to help new businesses establish their digital presence cost-effectively. Our packages are tailored to meet the unique needs and budgets of emerging companies.
                                 </div>
                             </div>
                         </div>
@@ -445,7 +445,7 @@
                             </h2>
                             <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We offer comprehensive online marketing services including search optimization, social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                     We offer comprehensive online marketing services including search optimization, social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop marketing agency in Madurai.
                                 </div>
                             </div>
                         </div>
@@ -508,7 +508,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col-lg-12 text-center">
-                    <p class="text-muted">Looking for more resources? Check out our <a href="blog.html" class="text-decoration-none fw-bold">digital marketing blog</a> for expert tips and insights.</p>
+                    <p class="text-muted">Looking for more resources? Check out our <a href="blog.html" class="text-decoration-none fw-bold">marketing blog</a> for expert tips and insights.</p>
                 </div>
             </div>
         </div>
@@ -521,7 +521,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="footer-brand">
                         <img src="images/logo.png" alt="Digital Marketing Agency Madurai - AdtoLeadz Logo" height="40" class="mb-3">
-                        <p>Transforming businesses through innovative digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers.</p>
+                        <p>Transforming businesses through innovative web marketing solutions. We help you grow, engage, and convert your audience into loyal customers.</p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
