--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional SEO Services in Madurai | Boost Your Search Rankings | AdtoLeadz</title>
     <meta name="description" content="Get expert SEO services in Madurai with AdtoLeadz. Our proven strategies help businesses improve search rankings, increase organic traffic, and grow online presence. Free consultation available.">
-    <meta name="keywords" content="SEO company Madurai, affordable SEO company in Madurai for small business, SEO marketing company near me, google SEO price, SEO services in Madurai, content marketing company, PPC management services">
+    <meta name="keywords" content="SEO services Madurai, search optimization, digital marketing agency, organic marketing, search rankings">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -337,7 +337,7 @@
                             </h2>
                             <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We are a leading search optimization company in Madurai with 3+ years of experience. Our team specializes in providing organic marketing services for businesses of all sizes, from startups to large enterprises. We offer comprehensive digital marketing services including content marketing and PPC management.
+                                    As a premier SEO agency in Madurai with over 3 years of expertise, we excel at delivering results-driven search optimization solutions. Our specialists work with diverse businesses, from emerging startups to established enterprises, offering tailored organic marketing strategies, content optimization, and performance-based advertising campaigns.
                                 </div>
                             </div>
                         </div>
@@ -349,7 +349,7 @@
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Yes! We are a comprehensive search optimization and digital marketing company that helps local businesses in Madurai improve their online presence. We provide targeted organic marketing strategies, local search optimization, and Google My Business management to help you reach local customers.
+                                    Absolutely! We specialize in helping local businesses in Madurai strengthen their online visibility through strategic SEO services. Our approach includes targeted organic marketing strategies, local search optimization, and Google My Business management to help you connect with customers in your area and drive more foot traffic to your business.
                                 </div>
                             </div>
                         </div>
@@ -361,7 +361,7 @@
                             </h2>
                             <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Besides search optimization services, we offer comprehensive digital marketing services including social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                    Beyond search optimization services, we provide a full suite of online marketing solutions including social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We serve as your complete digital growth partner in Madurai, helping you build a strong online presence across all channels.
                                 </div>
                             </div>
                         </div>
