--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expert Social Media Marketing in Madurai | Grow Your Brand Online | AdtoLeadz</title>
     <meta name="description" content="Elevate your brand with our social media marketing services in Madurai. We create engaging content, manage campaigns, and build communities that drive real business results for your company.">
-    <meta name="keywords" content="social media marketing agency Madurai, best social media marketing, organic social media marketing, social media agency, marketing agency for startups">
+    <meta name="keywords" content="social media marketing Madurai, social media agency, social campaigns, brand engagement, startup marketing">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
