✨ Working on Keyword Stuffing

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Marketing Blog - Expert Tips & Insights | AdtoLeadz</title>
-    <meta name="description" content="Stay updated with the latest online marketing trends, tips, and insights from AdtoLeadz. Expert advice on web design, SEO, social media marketing, and more.">
+    <meta name="description" content="Stay updated with the latest online marketing trends, tips, and insights from AdtoLeadz. Expert advice on web design, SEO, social media strategies, and more.">
     <meta name="keywords" content="digital marketing blog, SEO tips, marketing insights, web design trends, AdtoLeadz articles">
     
     <!-- Bootstrap 5 CSS -->
@@ -254,7 +254,7 @@
                                         <span class="blog-author"><i class="fas fa-user me-1"></i>By Michael Chen</span>
                                     </div>
                                     <h4 class="blog-title">Social Media Marketing Trends 2024</h4>
-                                    <p class="blog-excerpt">Learn about the emerging trends in social media marketing and how to leverage them for your business growth. From video content to AI-powered tools.</p>
+                                    <p class="blog-excerpt">Learn about the emerging trends in social media strategies and how to leverage them for your business growth. From video content to AI-powered tools.</p>
                                     <div class="blog-footer">
                                         <span class="read-time"><i class="fas fa-clock me-1"></i>6 min read</span>
                                         <a href="single-blog.html" class="btn btn-outline-primary btn-sm">Read More</a>
