--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform Your Business with Expert Digital Marketing in Madurai | AdtoLeadz</title>
-    <meta name="description" content="Transform your business with AdtoLeadz, Madurai's trusted digital marketing partner. We specialize in SEO, social media marketing, and web design to drive growth and increase your online visibility.">
-    <meta name="keywords" content="digital marketing agency Madurai, SEO services, social media marketing, web design, online marketing">
+    <title>Transform Your Business with AdtoLeadz</title>
+    <meta name="description" content="Transform your business with AdtoLeadz, Madurai's trusted digital marketing partner. We specialize in SEO, social media strategies, and web design to drive growth and increase your online visibility.">
+    <meta name="keywords" content="digital marketing agency Madurai, SEO services, social media strategies, web design, online marketing">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-right">
                     <h2 class="section-title">About AdtoLeadz</h2>
-                    <p class="section-text">We are Madurai's premier online marketing firm, dedicated to driving your business growth. Our expert team specializes in <a href="seo.html" class="text-decoration-none fw-bold">search optimization</a>, <a href="seo.html#ppc" class="text-decoration-none fw-bold">pay-per-click advertising</a>, and <a href="social-media-marketing.html" class="text-decoration-none fw-bold">social media marketing</a> to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
+                    <p class="section-text">We are Madurai's premier online marketing firm, dedicated to driving your business growth. Our expert team specializes in <a href="seo.html" class="text-decoration-none fw-bold">search optimization</a>, <a href="seo.html#ppc" class="text-decoration-none fw-bold">pay-per-click advertising</a>, and <a href="social-media-marketing.html" class="text-decoration-none fw-bold">social media strategies</a> to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
                     <p class="section-text">Our approach combines creativity, data-driven strategies, and cutting-edge technology to create campaigns that not only look great but also drive real business growth.</p>
                     <a href="about.html" class="btn btn-primary">Read More</a>
                 </div>
@@ -363,7 +363,7 @@
                         </div>
                         <div class="blog-content">
                             <h4>Social Media Marketing Trends 2024</h4>
-                            <p>Learn about the emerging trends in social media marketing and how to leverage them for your business growth.</p>
+                            <p>Learn about the emerging trends in social media strategies and how to leverage them for your business growth.</p>
                             <a href="single-blog.html" class="btn btn-outline-primary">Read More</a>
                         </div>
                     </div>
@@ -421,7 +421,7 @@
                             </h2>
                             <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                     We specialize in social media marketing for businesses of all sizes, including B2B companies. Our experienced team helps businesses in Madurai expand their online reach with data-driven strategies and proven results.
+                                     We specialize in social media strategies for businesses of all sizes, including B2B companies. Our experienced team helps businesses in Madurai expand their online reach with data-driven approaches and proven results.
                                 </div>
                             </div>
                         </div>
@@ -445,7 +445,7 @@
                             </h2>
                             <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                     We offer comprehensive online marketing services including search optimization, social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop marketing agency in Madurai.
+                                     We offer comprehensive online marketing services including search optimization, social media strategies, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop marketing agency in Madurai.
                                 </div>
                             </div>
                         </div>
