--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -86,7 +86,7 @@
                     <div class="overview-content">
                         <h3>Why Social Media Marketing Matters</h3>
                         <p class="section-text">Social media marketing is essential for modern businesses. With billions of active users across various platforms, social media provides unprecedented opportunities to connect with your target audience, build brand awareness, and drive sales.</p>
-                        <p class="section-text">Our comprehensive social media marketing services help you establish a strong online presence, engage with your customers, and convert followers into loyal customers. We create compelling content, manage your social accounts, and run targeted advertising campaigns to maximize your ROI.</p>
+                        <p class="section-text">Our comprehensive social media services help you establish a strong online presence, engage with your customers, and convert followers into loyal customers. We create compelling content, manage your social accounts, and run targeted advertising campaigns to maximize your ROI.</p>
                         <div class="stats-row">
                             <div class="stat-item">
                                 <h4>4.8B+</h4>
@@ -291,7 +291,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Frequently Asked Questions</h2>
-                    <p class="section-subtitle">Common questions about our social media marketing services in Madurai</p>
+                    <p class="section-subtitle">Common questions about our social media services in Madurai</p>
                 </div>
             </div>
             <div class="row">
@@ -305,7 +305,7 @@
                             </h2>
                             <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We are a leading social media marketing agency in Madurai with 3+ years of experience. Our team specializes in social media marketing for businesses of all sizes. We provide organic social media marketing and comprehensive digital marketing services.
+                                    We are a leading social media agency in Madurai with 3+ years of experience. Our team specializes in social media strategies for businesses of all sizes. We provide organic social media services and comprehensive digital marketing solutions.
                                 </div>
                             </div>
                         </div>
@@ -317,7 +317,7 @@
                             </h2>
                             <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Yes! We are a specialized agency that helps B2B companies build their online presence through targeted social media marketing strategies. We understand the unique needs of B2B businesses and create content that resonates with professional audiences.
+                                    Yes! We are a specialized agency that helps B2B companies build their online presence through targeted social media strategies. We understand the unique needs of B2B businesses and create content that resonates with professional audiences.
                                 </div>
                             </div>
                         </div>
@@ -329,7 +329,7 @@
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Besides social media marketing, we offer comprehensive digital marketing services including SEO, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                    Besides social media services, we offer comprehensive digital marketing solutions including SEO, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
                                 </div>
                             </div>
                         </div>
