--- a/web-design.html
+++ b/web-design.html
@@ -368,7 +368,7 @@
                             </h2>
                             <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Yes! We offer comprehensive digital marketing services including web design, SEO, social media marketing, and PPC management. We're your one-stop solution for all your digital marketing needs in Madurai.
+                                    Yes! We offer comprehensive digital marketing services including web design, SEO, social media strategies, and PPC management. We're your one-stop solution for all your digital marketing needs in Madurai.
                                 </div>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We offer comprehensive digital marketing services including web design, SEO, social media marketing, PPC management, content marketing, and Google My Business optimization. We help businesses establish a strong online presence.
+                                    We offer comprehensive digital marketing services including web design, SEO, social media strategies, PPC management, content marketing, and Google My Business optimization. We help businesses establish a strong online presence.
                                 </div>
                             </div>
                         </div>
